Tue Mar  5 15:28:34 CST 2013	<shadowglen@me.com>
* Fixed auto-load in List Statuses page and Retweets page

Tue Mar  5 03:12:41 CST 2013	<shadowglen@me.com>
* Updated jQuery Infinite Scroll plugin to support user-defined Next Page
* Fixed auto-load in Search and DM pages (Change "Back" link id to "less" to avoid loading the same page)

Mon Mar  4 14:30:47 CST 2013	<shadowglen@me.com>
* Updated search page to API 1.1

Sun Mar  3 02:39:50 CST 2013	<shadowglen@me.com>
* Changed update_with_media function into API 1.1 format

Sat Mar  2 23:13:54 CST 2013  <moeallenz@gmail.com>
* Updated embr version to 0.6.1(f-91)

Sat Mar  2 23:00:30 CST 2013  <moeallenz@gmail.com>
* Fixed user profile page

Sat Mar  2 21:20:43 CST 2013	<shadowglen@me.com>
* Initial log

TODO:

* Home page, User page and Replies page: still using 'page' parameter which is not documented in API 1.1
  * Related files: user.php, index.php, lib/twitteroauth.php

* Lists page: buttons not fully compatible on "All you lists" tab
  * Related files: lists.php, list.php, lib/twitteroauth.php
  * Possible reason: GET :user/lists is removed and replaced by GET lists/list,
    and the code need to be updated

* Favorite page: unable to load more tweets
  * Related files: favor.php, lib/twitteroauth.php
  * Possible reason: API changed and 'page' no longer supported

* Mentions page: siderbar position bug after checking API quota
  * Related files: inc/siderbar.php, ajax/apiQuota.php

* Clean up messed code

* Modify media upload method to official